--- a/templates/instructions.html
+++ b/templates/instructions.html
@@ -10,12 +10,13 @@
 			</div>
 			<p>You will attempt to guess the pattern in both order and color one row at a time for 12 rows. You can toggle each circle by <strong>clicking it</strong>. Try it with the circles above!</p>
 			<p>Once you've made your selection you'll click the <span><button class="btn btn-success example-eval">Evaluate</button></span> button.</p>
-			<p>Your row will then be evaluated and feedback will be provided by zero to four hearts to the right of your row. A colored in heart is placed for each circle that you correctly guessed its color <strong>and</strong> position. An empty heart indicates the existence of a correct color circle but placed in the wrong position.</p>
+			<p>Your row will then be evaluated and feedback will be provided by zero to four hearts to the right of your row. A colored in heart,<span class="glyphicon glyphicon-heart feedback example exact"></span>, is placed for each circle that you correctly guessed its color <strong>and</strong> position. A black heart,<span class="glyphicon glyphicon-heart feedback example"></span>, indicates the existence of a correct color circle but placed in the wrong position.</p>
 			<blockquote>
 				<p>If there are duplicate colours in the guess, they cannot all be awarded a (heart) unless they correspond to the same number of duplicate colours in the hidden code. For example, if the hidden code is white-white-black-black and the player guesses white-white-white-black, the codemaker will award two colored (hearts) for the two correct whites, nothing for the third white as there is not a third white in the code, and a colored (heart) for the black. No indication is given of the fact that the code also includes a second black.</p>
 				<p>Once feedback is provided, another guess is made; guesses and feedback continue to alternate until either the codebreaker guesses correctly, or twelve (or ten, or eight) incorrect guesses are made.</p>
 				<cite><a href="https://en.wikipedia.org/wiki/Mastermind_(board_game)">https://en.wikipedia.org/wiki/Mastermind_(board_game)</a></cite>
 			</blockquote>
+			<h2>Click <a ui-sref="game">here</a> to start playing!</h2>
 		</div>
 	</div>
 </div>
