--- a/templates/tips.html
+++ b/templates/tips.html
@@ -1,1 +1,5 @@
-tips
+<div class="row">
+	<div class="col-lg-offset-2 col-xs-12 col-lg-8">
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/OPeBUDXKGqA" frameborder="0" allowfullscreen></iframe>
+	</div>
+</div>
